@@ -42,7 +42,7 @@ let lib_ccobjs = ref []
 let lib_ccopts = ref []
 let lib_dllibs = ref []
 
-let add_ccobjs l =
+let add_ccobjs origin l =
   if not !Clflags.no_auto_link then begin
     if
       String.length !Clflags.use_runtime = 0
@@ -50,7 +50,8 @@ let add_ccobjs l =
     then begin
       if l.lib_custom then Clflags.custom_runtime := true;
       lib_ccobjs := l.lib_ccobjs @ !lib_ccobjs;
-      lib_ccopts := l.lib_ccopts @ !lib_ccopts;
+      let replace_origin = Misc.replace_substring ~before:"$CAMLORIGIN" ~after:origin in
+      lib_ccopts := List.map replace_origin l.lib_ccopts @ !lib_ccopts;
     end;
     lib_dllibs := l.lib_dllibs @ !lib_dllibs
   end
@@ -132,7 +133,7 @@ let scan_file obj_name tolink =
       seek_in ic pos_toc;
       let toc = (input_value ic : library) in
       close_in ic;
-      add_ccobjs toc;
+      add_ccobjs (Filename.dirname file_name) toc;
       let required =
         List.fold_right
           (fun compunit reqd ->
